# catkin_ws_new

./: README.md
devel/: .catkin
devel/lib/new/: hello_node
devel/lib/pkgconfig/: my_ros_package.pc  new.pc
devel/share/my_ros_package/cmake/: my_ros_packageConfig.cmake
devel/share/new/cmake/: newConfig.cmake
src/my_ros_package/: CMakeLists.txt  package.xml
src/my_ros_package/src/: my_cpp_node.cpp  my_python_node.py
src/new/: CMakeLists.txt  package.xml
src/new/src/: hello.cpp
